--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -53,7 +53,7 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
 
-    <title>React App</title>
+    <title>Hybrid XR</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
